// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClearNotification should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="clearNotifications uui-clear-notifications"
  >
    <button
      class="uui-button-box uui-enabled -clickable uui-link_button root uui-size-36 uui-no-left-icon uui-no-right-icon uui-color-primary"
      tabindex="0"
      type="button"
    >
      <div
        class="uui-caption uui-link-button-weight-semibold"
      >
        CLOSE ALL NOTIFICATIONS
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`ErrorNotification should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="uui-notification_card uui-color-error root"
    role="alert"
  >
    <div
      class="mainPath"
    >
      <div
        class="iconWrapper"
      >
        <div
          class="container uui-icon uui-enabled"
        >
          <svg
            class=""
            height="24"
            width="24"
          />
        </div>
      </div>
      <div
        class="content"
      />
      <div
        class="closeWrapper uui-notification_card-close_icon"
      >
        <button
          class="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root closeIcon"
          tabindex="0"
          type="button"
        >
          <div
            class="container uui-icon uui-enabled"
          >
            <svg
              class=""
            />
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HintNotification should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="uui-notification_card uui-color-info root"
    role="alert"
  >
    <div
      class="mainPath"
    >
      <div
        class="iconWrapper"
      >
        <div
          class="container uui-icon uui-enabled"
        >
          <svg
            class=""
            height="24"
            width="24"
          />
        </div>
      </div>
      <div
        class="content"
      />
      <div
        class="closeWrapper uui-notification_card-close_icon"
      >
        <button
          class="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root closeIcon"
          tabindex="0"
          type="button"
        >
          <div
            class="container uui-icon uui-enabled"
          >
            <svg
              class=""
            />
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotificationCard should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="uui-notification_card uui-color-error root"
    role="alert"
  >
    <div
      class="mainPath"
    >
      <div
        class="content"
      />
      <div
        class="closeWrapper uui-notification_card-close_icon"
      >
        <button
          class="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root closeIcon"
          tabindex="0"
          type="button"
        >
          <div
            class="container uui-icon uui-enabled"
          >
            <svg
              class=""
            />
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotificationCard should render with maximum props 1`] = `
<DocumentFragment>
  <div
    class="uui-notification_card uui-color-error root"
    role="alert"
  >
    <div
      class="mainPath"
    >
      <div
        class="iconWrapper"
      >
        <div
          class="container uui-icon uui-enabled"
        >
          <svg
            class=""
            height="24"
            width="24"
          />
        </div>
      </div>
      <div
        class="content"
      />
      <div
        class="closeWrapper uui-notification_card-close_icon"
      >
        <button
          class="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root closeIcon"
          tabindex="0"
          type="button"
        >
          <div
            class="container uui-icon uui-enabled"
          >
            <svg
              class=""
            />
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SuccessNotification should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="uui-notification_card uui-color-success root"
    role="alert"
  >
    <div
      class="mainPath"
    >
      <div
        class="iconWrapper"
      >
        <div
          class="container uui-icon uui-enabled"
        >
          <svg
            class=""
            height="24"
            width="24"
          />
        </div>
      </div>
      <div
        class="content"
      />
      <div
        class="closeWrapper uui-notification_card-close_icon"
      >
        <button
          class="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root closeIcon"
          tabindex="0"
          type="button"
        >
          <div
            class="container uui-icon uui-enabled"
          >
            <svg
              class=""
            />
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WarningNotification should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="uui-notification_card uui-color-warning root"
    role="alert"
  >
    <div
      class="mainPath"
    >
      <div
        class="iconWrapper"
      >
        <div
          class="container uui-icon uui-enabled"
        >
          <svg
            class=""
            height="24"
            width="24"
          />
        </div>
      </div>
      <div
        class="content"
      />
      <div
        class="closeWrapper uui-notification_card-close_icon"
      >
        <button
          class="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root closeIcon"
          tabindex="0"
          type="button"
        >
          <div
            class="container uui-icon uui-enabled"
          >
            <svg
              class=""
            />
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
